// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoadingAnimation Active 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <svg
      height="24px"
      preserveAspectRatio="xMidYMid"
      viewBox="0 0 100 10"
      width="240px"
      xlink="http://www.w3.org/1999/xlink"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="translate(4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.275039 0.275039)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.4734848484848484s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(22.4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.0862935 0.0862935)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.37878787878787873s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(40.0 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.0000823166 0.0000823166)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.284090909090909s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(59.2 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.0779504 0.0779504)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.18939393939393936s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(77.6 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#216beb"
          r="4"
          transform="scale(0.262719 0.262719)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.09469696969696968s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(96 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#ffbb00"
          r="4"
          transform="scale(0.49324 0.49324)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots LoadingAnimation Inactive 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <svg
      height="24px"
      preserveAspectRatio="xMidYMid"
      viewBox="0 0 100 10"
      width="240px"
      xlink="http://www.w3.org/1999/xlink"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="translate(4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.275039 0.275039)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.4734848484848484s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(22.4 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.0862935 0.0862935)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.37878787878787873s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(40.0 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.0000823166 0.0000823166)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.284090909090909s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(59.2 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.0779504 0.0779504)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.18939393939393936s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(77.6 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#c0c8d1"
          r="4"
          transform="scale(0.262719 0.262719)"
        >
          <animateTransform
            attributeName="transform"
            begin="-0.09469696969696968s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
      <g
        transform="translate(96 5)"
      >
        <circle
          cx="0"
          cy="0"
          fill="#e4e7eb"
          r="4"
          transform="scale(0.49324 0.49324)"
        >
          <animateTransform
            attributeName="transform"
            begin="0s"
            calcMode="spline"
            dur="1.1363636363636362s"
            keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="scale"
            values="0;1;0"
          />
        </circle>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots LoadingAnimation Page example - active 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c4 {
  margin-bottom: 8px;
}

.c2 {
  margin: auto;
  margin-bottom: 32px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  color: currentColor;
  min-width: 32px;
}

.c3 {
  margin-bottom: 16px;
  margin-top: 0;
  font-weight: 500;
  text-align: right;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 1.5;
  color: #434d59;
}

.c7 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #c0c8d1;
  margin-right: 8px;
}

.c7:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c9 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c9:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c9:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c1 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  background-color: rgba(255,255,255,0.95);
}

@media screen and (min-width:0px) {
  .c1 {
    margin: 16px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    margin: 24px;
  }
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3"
          color="currentColor"
          disabled={false}
          fontSize="medium"
          fontWeight="medium"
        >
          1/4
        </p>
        <div
          className="c4"
        >
          <svg
            height="24px"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 10"
            width="240px"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.275039 0.275039)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.4734848484848484s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(22.4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.0862935 0.0862935)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.37878787878787873s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(40.0 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.0000823166 0.0000823166)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.284090909090909s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(59.2 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.0779504 0.0779504)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.18939393939393936s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(77.6 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#216beb"
                r="4"
                transform="scale(0.262719 0.262719)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.09469696969696968s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(96 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#ffbb00"
                r="4"
                transform="scale(0.49324 0.49324)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="0s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
          </svg>
        </div>
        <p
          className="c5"
          color="darkGrey"
          disabled={false}
          fontSize="small"
        >
          Applying action ...
        </p>
      </div>
      <div
        className="c6"
      >
        <button
          aria-label="Retry"
          className="c7"
          disabled={true}
          onClick={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c8"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="32px"
            icon="refresh"
            size="32px"
            title={null}
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </svg>
        </button>
        <button
          aria-label="Abort"
          className="c9"
          disabled={false}
          onClick={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c8"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="32px"
            icon="close"
            size="32px"
            title={null}
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots LoadingAnimation Page example - inactive 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c4 {
  margin-bottom: 8px;
}

.c8 {
  margin-right: auto;
}

.c2 {
  margin: auto;
  margin-bottom: 32px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  background-color: #fcf5e3;
  padding: 16px;
  margin-bottom: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #ffbb00;
  border-left-style: solid;
  position: absolute;
  bottom: 64px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  color: currentColor;
  min-width: 32px;
}

.c3 {
  margin-bottom: 16px;
  margin-top: 0;
  font-weight: 500;
  text-align: right;
  font-size: 16px;
  line-height: 1.5;
  color: #c0c8d1;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 1.5;
  color: #c0c8d1;
}

.c10 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
  margin-right: 8px;
}

.c10:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c10:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c12 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c12:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c12:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c7 {
  margin-bottom: 16px;
}

.c7 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

.c1 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
  background-color: rgba(255,255,255,0.95);
}

@media screen and (min-width:0px) {
  .c1 {
    margin: 16px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    margin: 24px;
  }
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3"
          color="grey"
          disabled={false}
          fontSize="medium"
          fontWeight="medium"
        >
          1/4
        </p>
        <div
          className="c4"
        >
          <svg
            height="24px"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 10"
            width="240px"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.275039 0.275039)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.4734848484848484s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(22.4 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.0862935 0.0862935)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.37878787878787873s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(40.0 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.0000823166 0.0000823166)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.284090909090909s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(59.2 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.0779504 0.0779504)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.18939393939393936s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(77.6 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#c0c8d1"
                r="4"
                transform="scale(0.262719 0.262719)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="-0.09469696969696968s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
            <g
              transform="translate(96 5)"
            >
              <circle
                cx="0"
                cy="0"
                fill="#e4e7eb"
                r="4"
                transform="scale(0.49324 0.49324)"
              >
                <animateTransform
                  attributeName="transform"
                  begin="0s"
                  calcMode="spline"
                  dur="1.1363636363636362s"
                  keySplines="0.3 0 0.7 1;0.3 0 0.7 1"
                  keyTimes="0;0.5;1"
                  repeatCount="indefinite"
                  type="scale"
                  values="0;1;0"
                />
              </circle>
            </g>
          </svg>
        </div>
        <p
          className="c5"
          color="grey"
          disabled={false}
          fontSize="small"
        >
          Applying action ...
        </p>
      </div>
      <div
        className="c6 c7"
        role="alert"
      >
        <div
          className="c8"
        >
          This action takes longer than expected. Try again...
        </div>
      </div>
      <div
        className="c9"
      >
        <button
          aria-label="Retry"
          className="c10"
          disabled={false}
          onClick={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c11"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="32px"
            icon="refresh"
            size="32px"
            title={null}
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </svg>
        </button>
        <button
          aria-label="Abort"
          className="c12"
          disabled={false}
          onClick={null}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c11"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="32px"
            icon="close"
            size="32px"
            title={null}
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
